# signed-urls

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: code-quality-check.yaml
src/signed_urls/: __init__.py  sign.py  utils.py  validators.py  verify.py
tests/: data.py  test_sign.py  test_sign_verify_matrix.py  test_verify.py
tests/parametrized/: test_sign_parametrized.py  test_verify_parametrized.py
