[project]
name = "signed-urls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C901", # McCabe complexity
    "ARG001", # unused arguments in functions
]
ignore = [
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
pythonpath = ["src/", "tests/"]
